--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,9 @@ lib_ldf_mode = deep
 lib_deps = 
 	bodmer/TFT_eSPI@^2.5.42
 	https://github.com/PaulStoffregen/XPT2046_Touchscreen.git ;#v1.4
+	https://github.com/schreibfaul1/ESP32-audioI2S.git#3.0.0
+	https://github.com/pschatzmann/arduino-audio-tools.git ;arduinotools
+
 	lvgl/lvgl@^8.3.6 ; align this rev with the rev used by Squareline Studio
 	
 monitor_speed = 115200
